@@ -205,6 +205,7 @@ date=Date
 username=Username
 event=Event
 guest=Guest
+empty=Empty
 sunday=Sunday
 monday=Monday
 tuesday=Tuesday
