@@ -205,6 +205,7 @@ date=Datum
 username=Gebruikersnaam
 event=Gebeurtenis
 guest=Gast
+empty=Leeg
 sunday=zondag
 monday=maandag
 tuesday=dinsdag
