@@ -5,6 +5,8 @@
 
 * Added statistics page
 * Now keeping (and displaying) vote counts per quote
+* Added metadata-based logging, including search
+* You can now edit quotes before approving them
 * Made tag cloud ignore unapproved quotes
 * Made templates use HTML::Template's caching feature, which is pretty fast
 * Template parameters are now global, which means you can include parameters
